Temporary version with everything commented out except for generator and conclusion
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@358 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -733,7 +733,7 @@
 
 @misc{ForumSVN_DMV,
 	title = {{SVN repository for POWHEG input card for model with s-channel exchange of vector mediator}},
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMS/}",
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMV/}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
 }
@@ -764,7 +764,7 @@
 @misc{ForumSVN_DMS_tloop,
 	title = {{SVN repository for POWHEG input card for model with s-channel exchange of scalar mediator,
 	}},
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMS_topLoop/}",
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMS_tLoop/}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
 }
@@ -783,9 +783,16 @@
 	note = "[Online; accessed 15-May-2015]"
 }
 
-@misc{ForumSVN_TChannel,
-	title = {{SVN repository for Madgraph inputs with t-channel exchange of colored scalar mediator}},
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_tChannel/}",
+@misc{ForumSVN_TChannel_PapucciVichiZurek,
+	title = {{SVN repository for Madgraph inputs with t-channel exchange of colored scalar mediator, couplings to light quarks only}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_tChannel/contributed_by_PapucciVichiZurek/}",
+	year = {2015}, 
+	note = "[Online; accessed 27-April-2015]"
+}
+
+@misc{ForumSVN_TChannel_Amelia,
+	title = {{SVN repository for Madgraph inputs with t-channel exchange of colored scalar mediator, couplings to all quark generations}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_tChannel/contributed_by_Amelia_Brennan/}",
 	year = {2015}, 
 	note = "[Online; accessed 27-April-2015]"
 }
@@ -835,7 +842,7 @@
 }
 
 @misc{ForumSVN_monoHEFTD5,
-	title = {{SVN repository for Madgraph inputs for mono-Higgs EFT models}},
+	title = {{SVN repository for Madgraph inputs for mono-Higgs EFT models, dimension 4 and 5}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_Higgs_D4D5/}",
 	year = {2015}, 
 	note = "[Online; accessed 04-May-2015]"
@@ -2497,4 +2504,36 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 	primaryClass   = "hep-ph",
 	reportNumber   = "EFI-13-34",
 	SLACcitation   = "%%CITATION = ARXIV:1401.3339;%%",
+}
+
+@article{Hoche:2014kca,
+	author         = "Höche, Stefan and Kuttimalai, Silvan and Schumann,
+	Steffen and Siegert, Frank",
+	title          = "{Beyond Standard Model calculations with Sherpa}",
+	journal        = "Eur.Phys.J.",
+	number         = "3",
+	volume         = "C75",
+	pages          = "135",
+	doi            = "10.1140/epjc/s10052-015-3338-4",
+	year           = "2015",
+	eprint         = "1412.6478",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "SLAC-PUB-16170, IPPP-14-105, DCPT-14-210, MCNET-14-35",
+	SLACcitation   = "%%CITATION = ARXIV:1412.6478;%%",
+}
+
+@article{Frederix:2012ps,
+	author         = "Frederix, Rikkert and Frixione, Stefano",
+	title          = "{Merging meets matching in MC@NLO}",
+	journal        = "JHEP",
+	volume         = "1212",
+	pages          = "061",
+	doi            = "10.1007/JHEP12(2012)061",
+	year           = "2012",
+	eprint         = "1209.6215",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "CERN-PH-TH-2012-247, ZU-TH-21-12",
+	SLACcitation   = "%%CITATION = ARXIV:1209.6215;%%",
 }
