--- a/doc/tex/Conclusions.tex
+++ b/doc/tex/Conclusions.tex
@@ -27,34 +27,38 @@ limited in scope and time, was focused on the proposal of a prioritized, compact
 to be used for the design of the early Run-2 searches. 
 This report document the studies by Forum contributors from experiments and theory that allowed
 to identify a set of kinematically distinct models and model points. 
-The state of the art calculations and tools that are available to the LHC collaborations 
-at the start of Run-2 are detailed in this document. A summary of these studies can be found in 
-Table 6.1. 
-
+Table 6.1 summarizes the state of the art calculations and tools that are available to the LHC collaborations 
+at the start of Run-2 and that are under development on a similar timescale. 
+The ATLAS and CMS collaborations have agreed to follow the recommendations of the Forum on the use of
+the state-of-the-art calculations for Dark Matter models. 
+ATLAS and CMS will harmonize the Monte Carlo signal benchmark generation for 
+early Run-2 searches, by simulating the central values for the model points detailed in this document,
+using the tools employed for studies within the Forum and marked in bold in Table 6.1. 
+ 
 \input{tex/SummaryTable.tex}. 
 
-This document primarily presents studies related to simplified models. 
-The presentation of results for EFT benchmark models is also discussed. 
-The studies contained in this report are meant to highlight the use of
-EFTs as a benchmark that is complementary to simplified models, 
-and to demonstrate how that collider results could be presented a function of the 
-fraction of events that are valid within the contact interaction approximation.  
-
-A number of points remain to be developed beyond the scope of this Forum, 
-in order to fully benefit from LHC searches in the global quest for Dark Matter.
-First and foremost, many implicit assumptions have not been fully explored in this work. 
-As a consequence, the list of models employed for early LHC Run-2 searches is not meant to be 
-complete or exhaustive, nor cover the entire range of possibility even for the limited scope of the 
-putative collider-stable dark matter candidate considered. 
-The limitations of the list of benchmarks considered should encourage the theoretical community to continue developing
-models and calculations, and guide the experimental community to test and use those new ideas in future searches. 
-Furthermore, we see the need for broader discussion on the comparison 
-of experimental results from different energy frontiers. The role of constraints on the mediator particles 
-from direct past and present collider searches should be developed further. 
-The uncertainties in these comparisons should be discussed and conveyed, so that the different results 
-can be placed in the correct context to enhance their complementarity.
-Work beyond this Forum will be needed to provide guidance on the identification of a possible signal, 
-if hints are found either during the early LHC Run-2 or by direct and indirect detection experiments. Conversely,
-if nothing is found, novel collider search strategies that explore new corners will be required. 
-\Todo{These points will be discussed at the meeting that marks the conclusion of the works of the Forum, to be held during the week of June 10th.} 
+%This document primarily presents studies related to simplified models. 
+%The presentation of results for EFT benchmark models is also discussed. 
+%The studies contained in this report are meant to highlight the use of
+%EFTs as a benchmark that is complementary to simplified models, 
+%and to demonstrate how that collider results could be presented a function of the 
+%fraction of events that are valid within the contact interaction approximation.  
+%
+%A number of points remain to be developed beyond the scope of this Forum, 
+%in order to fully benefit from LHC searches in the global quest for Dark Matter.
+%First and foremost, many implicit assumptions have not been fully explored in this work. 
+%As a consequence, the list of models employed for early LHC Run-2 searches is not meant to be 
+%complete or exhaustive, nor cover the entire range of possibility even for the limited scope of the 
+%putative collider-stable dark matter candidate considered. 
+%The limitations of the list of benchmarks considered should encourage the theoretical community to continue developing
+%models and calculations, and guide the experimental community to test and use those new ideas in future searches. 
+%Furthermore, we see the need for broader discussion on the comparison 
+%of experimental results from different energy frontiers. The role of constraints on the mediator particles 
+%from direct past and present collider searches should be developed further. 
+%The uncertainties in these comparisons should be discussed and conveyed, so that the different results 
+%can be placed in the correct context to enhance their complementarity.
+%Work beyond this Forum will be needed to provide guidance on the identification of a possible signal, 
+%if hints are found either during the early LHC Run-2 or by direct and indirect detection experiments. Conversely,
+%if nothing is found, novel collider search strategies that explore new corners will be required. 
+%\Todo{These points will be discussed at the meeting that marks the conclusion of the works of the Forum, to be held during the week of June 10th.} 
 
