--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -383,7 +383,7 @@ It should be checked that the high-mass mediator case for the simplified model i
 
 Whenever a UV completion is not available, an EFT still
 captures a range of possible theories beyond the simplified models that we already consider. 
-However, in the case of the dimension-7 operators detailed in Section~\ref{sec:sec:EFT_models_with_direct_DM_boson_couplings}
+However, in the case of the dimension-7 operators detailed in Section~\ref{sec:EFT_models_with_direct_DM_boson_couplings}
 we can only roughly control how well the EFT approximation holds, as described in Section~\ref{sub:validityEWContact}.
 Despite the fact that a propagator was introduced to motivate
 the truncation procedure for \schannel models, the prescription from Sec.~\ref{sub:EFT_withSimp}
