--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -76,6 +76,7 @@ the parameters for each of the benchmark models chosen,
 the studies towards the choices of the parameters to be scanned.
 
 \section{Specific simplified models including EW bosons, tailored to Higgs+MET searches}
+\label{sec:monoHiggs}
 \input{tex/EWSpecificModels_MonoHiggs}
 
 \section{EFT models with direct DM-boson couplings}
