--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -16,8 +16,8 @@ completion for Dirac fermion Dark Matter available to date.
 They provide kinematic distributions that 
 are unique to mono-boson signatures, and that in most cases 
 are not reproduced by an equivalent simplified model.\footnote{Wherever this is
-the case, we recommend only the generation of simplified model result as the results can be rescaled
-and reinterpreted.}
+the case, for practical reasons one can only generation a simplified model result 
+in the limiting EFT case, as the results can be rescaled and reinterpreted.}
 
 A complete list of effective operators with direct DM/boson couplings for
 Dirac DM, up to dimension 7, can be found in~\cite{Cotta:2012nj, Carpenter:2012rg, Crivellin:2015wva}. 
