--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -118,8 +118,8 @@ For the vector and axial-vector models, the minimal width is:
 \Gamma^{\textrm{V}}_\textrm{min} &= 
 \frac{\gDM^2 \mMed}{12\pi}\left(1+\frac{2 \mDM^2}{\mMed^2} \right)\beta_{DM} \theta(\mMed-2\mDM)\\\nonumber
  &+ \sum_q \frac{3 \gq^2 \mMed}{12\pi}\left(1+\frac{2 m_q^2}{\mMed^2} \right)\beta_q \theta(\mMed-2m_q),\\
-\Gamma_{\textrm{min}}^{\rm{A}}&=\frac{\gDM^2 \mMed}{12\pi} \beta_{DM}^{3/2} \theta(\mMed-2\mDM)\\\nonumber
-   &+ \sum_q \frac{3 \gq^2 \mMed}{12\pi}\beta_q^{3/2} \theta(\mMed-2m_q)\;.
+\Gamma_{\textrm{min}}^{\rm{A}}&=\frac{\gDM^2 \mMed}{12\pi} \beta_{DM}^{3} \theta(\mMed-2\mDM)\\\nonumber
+   &+ \sum_q \frac{3 \gq^2 \mMed}{12\pi}\beta_q^{3} \theta(\mMed-2m_q)\;.
 \end{align}
 $\theta(x)$ denotes the Heaviside step function, and
 $\beta_f=\sqrt{1-\frac{4 m_f^2}{\mMed^2}}$ is the velocity of the
